--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I am <span class="typed" data-typed-items="Danielle Engelbrecht, Developer,Adminstrator, Designer"></span></h1>
+        <h1>I am <span class="typed" data-typed-items="Danielle Engelbrecht,A developer, A adminstrator , A designer"></span></h1>
         <p> Developer, Adminstrator, Designer</p>
 
         <ul class="list-unstyled list-social">
