--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I am <span class="typed" data-typed-items="Danielle Engelbrecht,A developer, A adminstrator , A designer"></span></h1>
+        <h1>I am <span class="typed" data-typed-items="Danielle Engelbrecht,A developer, An adminstrator , A designer"></span></h1>
         <p> Developer, Adminstrator, Designer</p>
 
         <ul class="list-unstyled list-social">
@@ -186,15 +186,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/logo.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/logo.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/Screenshot 2024-05-27 140231.png" class="img-fluid" alt="">
             <div class="portfolio-info">
