--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <span>PHOTOGRAPHY</span>
                 <p class="separator">Being able to capture every moment and making it last for a lifetime ! </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -183,10 +183,7 @@
             </ul>
           </div>
         </div>
-
         <div class="row portfolio-container">
-
-          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/Screenshot 2024-05-27 140231.png" class="img-fluid" alt="">
             <div class="portfolio-info">
