--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   
   <div id="services">
     <div class="container">
-        <div class="services-slider swiper">
+        <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="services-block">
@@ -201,7 +201,7 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-        var swiper = new Swiper('.swiper', {
+        var swiper = new Swiper('.swiper-container', {
             loop: true,
             pagination: {
                 el: '.swiper-pagination',
