--- a/index.html
+++ b/index.html
@@ -276,6 +276,26 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/2024-07-09.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tinka Library Management System</h4>
+              <p>Java</p>
+              <a href="assets/img/2024-07-09.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/nexbank.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>NexBank</h4>
+              <p>Python</p>
+              <a href="assets/img/nexbank.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/Screenshot 2024-05-08 112953.png" class="img-fluid" alt="">
@@ -324,7 +344,7 @@
           <div class="col-lg-6">
               <div class="skill-item">
                   <h3>UI/UX Design</h3>
-                  <p>Skilled in creating intuitive and visually appealing user interfaces using design tools such as Figma and Sketch.</p>
+                  <p>Skilled in creating intuitive and visually appealing user interfaces using design tools such as Tkinter and Figma.</p>
               </div>
               <div class="skill-item">
                   <h3>Project Management</h3>
