--- a/index.html
+++ b/index.html
@@ -296,18 +296,16 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-          
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/Screenshot 2024-05-08 112953.png" class="img-fluid" alt="">
+            <img src="assets/img/2024-07-12.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>SlayByJ</h4>
-              <p>HTML,CSS,JavaScript</p>
-              <a href="assets/img/Screenshot 2024-05-08 112953.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <h4>Ball Game</h4>
+              <p>Python</p>
+              <a href="assets/img/2024-07-12.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
           </div>
-
         </div>
 
       </div>
